--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 		<div class="panda cuatro"><span>X</span></div>
 	</section>
 	<section class="botones">
-		<a href="#">Origen</a>
-		<a href="#">Extensión</a>
-		<a href="#">Restaurar fotos</a>
+		<a href="#" id="parrafo1">Origen</a>
+		<a href="#" id="parrafo2">Extensión</a>
+		<a href="#" id="recargar">Restaurar fotos</a>
 	</section>
 	<section class="parrafos">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione sed vel inventore explicabo laborum dolor hic minus, aperiam assumenda cum optio. Voluptates illum corporis, dolor sed, debitis soluta modi tempora!</p>
+		<p id="uno">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione sed vel inventore explicabo laborum dolor hic minus, aperiam assumenda cum optio. Voluptates illum corporis, dolor sed, debitis soluta modi tempora!</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione sed vel inventore explicabo laborum dolor hic minus, aperiam assumenda cum optio. Voluptates illum corporis, dolor sed, debitis soluta modi tempora!</p>
+		<p id="dos">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione sed vel inventore explicabo laborum dolor hic minus, aperiam assumenda cum optio. Voluptates illum corporis, dolor sed, debitis soluta modi tempora!</p>
 	</section>
 
 	<footer></footer>
